--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,18 +11,9 @@ android {
         versionCode 1
         versionName "1.0"
     }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-
+    compile project(':library')
     compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.yayandroid:LocationManager:1.1.2'
 }
