--- a/build.gradle
+++ b/build.gradle
@@ -12,12 +12,27 @@ buildscript {
     }
 }
 
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
+
+
 allprojects {
     repositories {
         jcenter()
     }
-}
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+    project.ext {
+        versions = [
+              minSdkVersion    : 14,
+              compileSdkVersion: 24,
+              targetSdkVersion : 24,
+              buildToolsVersion: '24.0.3'
+        ]
+
+        libraries = [
+              appCompat         : 'com.android.support:appcompat-v7:24.2.1',
+              googlePlayServices: 'com.google.android.gms:play-services-location:9.6.1'
+        ]
+    }
 }
