--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ android:
     - build-tools-25.0.0
     - android-25
 
+  licenses:
+    - 'android-sdk-license-.+'
+
 # installing Java 8 JDK is required to prevent getting "Unsupported major.minor version 52.0" error
 jdk:
   - oraclejdk8
