Updated playservices and versions

--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath 'com.android.tools.build:gradle:3.0.0'
         classpath 'com.dicedmelon.gradle:jacoco-android:0.1.1'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -21,19 +21,22 @@ task clean(type: Delete) {
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+        }
     }
 
     project.ext {
         versions = [
               minSdkVersion    : 14,
-              compileSdkVersion: 25,
-              targetSdkVersion : 25,
-              buildToolsVersion: '25.0.0'
+              compileSdkVersion: 27,
+              targetSdkVersion : 27,
+              buildToolsVersion: '26.0.2'
         ]
 
         libraries = [
-              appCompat         : 'com.android.support:appcompat-v7:24.2.1',
-              googlePlayServices: 'com.google.android.gms:play-services-location:9.6.1',
+              appCompat         : 'com.android.support:appcompat-v7:27.0.2',
+              googlePlayServices: 'com.google.android.gms:play-services-location:11.8.0',
 
               junit             : 'junit:junit:4.12',
               assertJ           : 'com.squareup.assertj:assertj-android:1.1.1',
