--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,14 @@
 buildscript {
     repositories {
         jcenter()
+        google()
+        maven {
+            url 'https://maven.google.com/'
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
-        classpath 'com.dicedmelon.gradle:jacoco-android:0.1.1'
+        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.dicedmelon.gradle:jacoco-android:0.1.4'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -21,19 +25,19 @@ task clean(type: Delete) {
 allprojects {
     repositories {
         jcenter()
+        google()
     }
 
     project.ext {
         versions = [
               minSdkVersion    : 14,
-              compileSdkVersion: 25,
-              targetSdkVersion : 25,
-              buildToolsVersion: '25.0.0'
+              compileSdkVersion: 28,
+              targetSdkVersion : 28
         ]
 
         libraries = [
-              appCompat         : 'com.android.support:appcompat-v7:24.2.1',
-              googlePlayServices: 'com.google.android.gms:play-services-location:9.6.1',
+              appCompat         : 'com.android.support:appcompat-v7:28.0.0',
+              googlePlayServices: 'com.google.android.gms:play-services-location:16.0.0',
 
               junit             : 'junit:junit:4.12',
               assertJ           : 'com.squareup.assertj:assertj-android:1.1.1',
