--- a/.travis.yml
+++ b/.travis.yml
@@ -8,15 +8,25 @@ android:
   components:
     - tools
     - platform-tools
-    - build-tools-25.0.0
-    - android-25
+    - build-tools-28.0.0
+    - android-28
 
     - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
 
   licenses:
+    - 'android-sdk-preview-license-52d11cd2'
     - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
+
+before_install:
+  - chmod +x gradlew
+  - mkdir "$ANDROID_HOME/licenses" || true
+  - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
+  - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
+  - yes | sdkmanager --update
+  - yes | sdkmanager --licenses
 
 script:
   - ./gradlew clean check --stacktrace --no-daemon
