Add leakcanary lib to sample app

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,4 +16,6 @@ android {
 dependencies {
     implementation project(':library')
     implementation libraries.appCompat
+
+    debugImplementation libraries.leakcanary
 }
